--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-* {
-  margin: 0;
-  padding: 0;
+.card {
+  width: 220px;
+  height: 290px;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 50, 0.25) 0 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
+  text-align: center;
 }
