--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+  font-family: 'Cambria', Arial, Helvetica, sans-serif;
+  color: rgb(79, 79, 79);
+}
+
+#review-container {
+  display: flex;
+  justify-content: center;
+}
+
 .card {
   width: 220px;
   height: 290px;
@@ -5,4 +15,16 @@
   box-shadow: rgba(50, 50, 50, 0.25) 0 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
   text-align: center;
+}
+
+.card .img-container {
+  width: 90px;
+  height: 90px;
+  border-radius: 45px;
+  overflow: hidden;
+}
+
+.card .img-container img {
+  width: 100px;
+  height: 100px;
 }
