--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   color: rgb(79, 79, 79);
 }
 
+body {
+  margin-top: 20%;
+}
+
 #review-container {
   display: flex;
   justify-content: center;
@@ -15,9 +19,25 @@
   box-shadow: rgba(50, 50, 50, 0.25) 0 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  opacity: 0.3;
+  transform: scale(0.8, 0.8, 1);
+  transition: all 0.3s ease-in-out;
+  margin: 10px;
+}
+
+.active {
+  opacity: 1;
+  transform: scale(1, 1, 1);
+  transition: all 0.3s ease-in-out;
 }
 
 .card .img-container {
+  position: relative;
   width: 90px;
   height: 90px;
   border-radius: 45px;
@@ -27,4 +47,17 @@
 .card .img-container img {
   width: 100px;
   height: 100px;
+}
+
+.card .name-container {
+  position: absolute;
+  bottom: 0;
+  background-color: rgb(187, 223, 244);
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.card p {
+  padding: 0 20px;
 }
